# libradiodns

./: .gitignore  .gitmodules  Doxyfile  Makefile  Makefile.am  NOTICE  README  README.GIT  cli.c  configure.ac  context.c  libradiodns-uninstalled.pc.in  libradiodns.h  libradiodns.pc.in  p_radiodns.h  resolver.c
doc/: Makefile.am  radiodns_create.3  radiodns_create.xml  radiodns_destroy.3  radiodns_destroy.xml  radiodns_destroy_app.3  radiodns_destroy_app.xml  radiodns_domain.3  radiodns_domain.xml  radiodns_resolve_app.3  radiodns_resolve_app.xml  radiodns_resolve_target.3  radiodns_resolve_target.xml  radiodns_target.3  radiodns_target.xml
